# ProjetoVictor

./: .gitignore  CMakeLists.txt  README.md  TriangleVitor.msh  main.cpp  sei la.cpp
DADOS_TIF_10Layers/: Sample000.tif  Sample001.tif  Sample002.tif  Sample003.tif  Sample004.tif  Sample005.tif  Sample006.tif  Sample007.tif  Sample008.tif  Sample009.tif
Mallas2D/: testskel4.msh  testskel4Configured.geo
Mallas3D/: outputCoarseDEVug15.geo  outputCoarseDEVug15.msh  outputCoarseDEsmallVuginMesh.geo  outputCoarseDEsmallVuginMesh.msh
RAW3dVTK/: CMakeLists.txt  EditImage.cpp  EditImage.h  main.cpp
TIF3dVTK/: CMakeLists.txt  TestVTK3D.cpp  TestVTK3D.h
TestBinaryImage/: CMakeLists.txt  main.cpp
TestBinaryImage3D/: main.cpp
TestNeoPz/: CMakeLists.txt  main.cpp
TestOpenCV/: CMakeLists.txt  TSFMixedDarcy.cpp  TSFMixedDarcy.h  main.cpp
VisualMatVtkPZ /: CMakeLists.txt  main.cpp
